Implimentation of active and inactive for users
